feat: Implement dynamic padding and scrollbars for editor canvas
- Removed the in-progress document for dynamic padding implementation.
- Added detailed contributing guidelines, including sections on reporting bugs, suggesting features, and translation contributions.
- Updated Cargo.toml with project metadata, including authors, description, and keywords.
- Enhanced README.md to reflect the editor functionality and added badges for release and license.
- Created CHANGELOG.md to document notable changes and features in version 0.1.0.
- Added CODE_OF_CONDUCT.md to establish community standards and expectations.
- Introduced SECURITY.md to outline the security policy, reporting vulnerabilities, and best practices for users and contributors.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "iced_lens"
 version = "0.1.0"
 edition = "2021"
+authors = ["Bawycle"]
+description = "Lightweight, internationalized image viewer and editor built with the Iced GUI toolkit"
+repository = "https://codeberg.org/Bawycle/iced_lens"
+homepage = "https://codeberg.org/Bawycle/iced_lens"
+license = "MPL-2.0"
+keywords = ["image", "viewer", "editor", "gui", "iced"]
+categories = ["multimedia::images", "gui"]
+readme = "README.md"
+rust-version = "1.78"
 
 [dependencies]
 dirs = "6.0.0"
